# atk-ai

./: 00_rkmedia_rockx_carplate_recognition.tar  01_rkmedia_rockx_face_detection.tar  02_rkmedia_rockx_face_landmark.tar  03_rkmedia_rockx_face_masks_detection.tar  04_rkmedia_rockx_object_detection.tar  05_rkmedia_rockx_object_track.tar  06_rkmedia_rockx_person_detection.tar  07_rkmedia_rockx_pose_body.tar  08_rkmedia_rockx_pose_body_demo.tar  09_rkmedia_rockx_pose_finger_demo.tar  10_atk_mobilenet_object_classification.tar  11_atk_ssd_object_recognize.tar  13_atk_zbar_recognize.tar  14_atk_rockx_face_recognition.tar  15_rkmedia_rockx_face_detection_rtsp.tar
05_rkmedia_rockx_object_track/: CMakeLists.txt  rkmedia_rockx_object_track.cpp  rkmedia_rockx_object_track.h
10_atk_mobilenet_object_classification/: CMakeLists.txt  atk_mobilenet_object_classification.cpp  atk_mobilenet_object_classification.h
11_atk_ssd_object_recognize/: CMakeLists.txt  atk_ssd_object_recognize.cpp  atk_ssd_object_recognize.h
12_atk_yolov5_object_recognize/: CMakeLists.txt  atk_yolov5_object_recognize.cpp  atk_yolov5_object_recognize.h
15_rkmedia_rockx_face_detection_rtsp/: CMakeLists.txt  rkmedia_rockx_face_detection_rtsp.cpp  rkmedia_rockx_face_detection_rtsp.h
my_atk_ssd_object_recognize_rtsp/: CMakeLists.txt  my_atk_ssd_object_recognize_rtsp.cpp  my_atk_ssd_object_recognize_rtsp.h  ssd.cc  ssd.h
my_atk_ssd_object_recognize_track_rtsp/: CMakeLists.txt  my_atk_ssd_object_recognize_track_rtsp.cpp  my_atk_ssd_object_recognize_track_rtsp.h  test.sh
my_atk_yolo5_object_recognize_rtsp/: CMakeLists.txt  drm_func.c  my_atk_yolo5_object_recognize_rtsp.cpp  my_atk_yolo5_object_recognize_rtsp.h
my_atk_yolo5_object_recognize_rtsp_vo/: CMakeLists.txt  my_atk_yolo5_object_recognize_rtsp_vo.cpp  postprocess.cc  rga_func.c
my_kcf_rtsp_test/: CMakeLists.txt  my_kcf_rtsp_test.cpp  my_kcf_rtsp_test.h
my_object_tracking_vo_select_rtsp/: CMakeLists.txt  my_object_tracking_vo_select_rtsp.cpp  my_object_tracking_vo_select_rtsp.h
my_rkmedia_opencv_CalcFlow_LK_rtsp/: CMakeLists.txt  my_rkmedia_opencv_CalcFlow_LK_rtsp.cpp  my_rkmedia_opencv_CalcFlow_LK_rtsp.h
my_rkmedia_rockx_object_track_rtsp/: CMakeLists.txt  my_rkmedia_rockx_object_track_rtsp.cpp  my_rkmedia_rockx_object_track_rtsp.h
my_rkmedia_vi_venc_Rtsp/: CMakeLists.txt  my_rkmedia_vi_venc_Rtsp.cpp
my_rkmedia_vi_venc_Rtsp/libRtsp/: rtsp.h
my_rkmedia_vi_venc_bc_Rtsp/: CMakeLists.txt  my_rkmedia_vi_venc_bc_Rtsp.cpp  my_rkmedia_vi_venc_bc_Rtsp.h
my_rkmedia_vi_venc_bc_Rtsp/libRtsp/: MediaSession.h  MediaSource.h  RtspServer.h
my_rkmedia_vi_venc_rtsp/: CMakeLists.txt  my_rkmedia_vi_venc_rtsp.cpp  my_rkmedia_vi_venc_rtsp.h
my_rknn_tf_ssd_object_recongnize_rtsp/: CMakeLists.txt  my_rknn_tf_ssd_object_recongnize_rtsp.cpp
my_rknn_tf_ssd_object_recongnize_rtsp/ssd_mobilenet_v1/: test.py
